# spatial_ot

./: .gitignore  CHANGELOG.md  README.md  __init__.py  cli.py  communication.py  config.py  install_env.sh  nn.py  ot.py  pool_spatial_ot_input.sh  pooling.py  prepare_all_spatial_ot_input.sh  prepare_spatial_ot_input.sh  preprocessing.py  pyproject.toml  run.sh  run_deep_segmentation_cohort_gpu.sh  run_optimal_setting_search.sh  run_p2_crc_multilevel_ot.sh  run_p2_crc_multilevel_ot_exploratory_umap.sh  run_p2_crc_pilot.sh  run_p2_crc_smoke.sh  run_prepared_cohort_gpu.sh  run_spatial_ot_input.sh  training.py  visualization.py
Untitled/: .gitignore  README.md  prepare_all_spatial_ot_input.sh  run.sh
Untitled/configs/: multilevel_deep_example.toml
Untitled/spatial_ot/: __init__.py  cli.py  deep_features.py  feature_source.py  training.py
Untitled/tests/: test_deep_features.py  test_gpu_runtime_controls.py  test_pooling.py  test_visium_hd_pipeline_regressions.py
configs/: crc_demo_programs.json  multilevel_deep_example.toml  p2_crc_pilot.toml  p2_crc_smoke.toml
deep/: checkpoint.py  features.py  io.py
multilevel/: core.py  io.py
runs/p2_crc_smoke/: cells_output.h5ad  (+6 more)
scripts/: README.md  _high_vram_deep_profile.sh  check_subregion_internal_heterogeneity.py  install_env.sh  install_spatial_ot.sh  package_visium_hd_full_gene_h5ad.py  plot_sample_subregion_geometry.py  pool_spatial_ot_input.sh  prepare_all_spatial_ot_input.sh  prepare_spatial_ot_input.sh  prepare_xenium_spatial_ot_input.sh  run.sh  run_deep_segmentation_cohort_gpu.sh  run_optimal_setting_search.sh  run_p2_crc_multilevel_ot.sh  run_p2_crc_multilevel_ot_exploratory_umap.sh  run_prepared_cohort_gpu.sh  run_spatial_ot_input.sh  run_visium_hd_cohort_gpu.sh  run_visium_hd_umap3d_direct_pairwise_fgw.py  run_visium_hd_umap3d_landmark_fgw.py  run_visium_hd_umap3d_sample_rough_full_fine_fgw.py  run_xenium_cohort_gpu.sh
spatial_ot/: __init__.py  cli.py  communication.py  config.py  deep_features.py  doctor.py  feature_source.py  multilevel_ot.py  nn.py  optimal_search.py  ot.py  pooling.py  preprocessing.py  programs.py  training.py  visualization.py
spatial_ot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cell_niche.py  test_concern_resolution.py  test_deep_features.py  test_doctor.py  test_gpu_runtime_controls.py  test_multilevel_ot.py  test_optimal_search.py  test_pairwise_niche.py  test_pooling.py  test_regressions.py  test_repo_hygiene.py  test_sample_niche_plots.py  test_visium_hd_pipeline_regressions.py
(+65 files in other folders)
