[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-ot"
version = "0.1.0"
description = "Spatial OT research package with multilevel, shape-normalized semi-relaxed Wasserstein clustering utilities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anndata>=0.12",
  "numpy>=2.0",
  "pandas>=2.0",
  "scanpy>=1.11",
  "scikit-learn>=1.5",
  "scipy>=1.13",
  "torch>=2.4",
  "POT>=0.9",
]

[project.scripts]
spatial-ot = "spatial_ot.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["spatial_ot*"]
