[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-ot"
version = "0.0.12"
description = "Spatial OT research package with multilevel, shape-normalized semi-relaxed Wasserstein clustering utilities."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Yu Adam Ding"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "anndata>=0.12",
  "matplotlib>=3.8",
  "numpy>=2.0",
  "pandas>=2.0",
  "pyarrow>=15.0",
  "scanpy>=1.11",
  "scikit-learn>=1.5",
  "scipy>=1.13",
  "torch>=2.4",
  "POT>=0.9",
]

[project.optional-dependencies]
geometry = [
  "geopandas>=0.14",
  "shapely>=2.0",
]
parallel = [
  "joblib>=1.4",
  "tqdm>=4.66",
]
viz = [
  "umap-learn>=0.5",
]
dev = [
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
]

[project.scripts]
spatial-ot = "spatial_ot.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["spatial_ot*"]
